solve overflow-x issue from AOS

--- a/hairdresser/src/styles.css
+++ b/hairdresser/src/styles.css
@@ -5,4 +5,8 @@
 
 
 
-
+/* !prevents overflow-x / aos issue */
+[data-aos] {
+  will-change: transform;
+  overflow-x: hidden;
+}
